syntax = "proto3";

option csharp_namespace = "AccountingGrpc";

service LedgerService {
  rpc GetPurchaseLedgers (OrganizationRequest) returns (LedgerResponse);
}

message OrganizationRequest {
  string organizationId = 1;
}

message LedgerResponse {
  int32 statusCode = 1;
  string message = 2;
  repeated LedgerDto data = 3;
}

message LedgerDto {
  string id = 1;
  string ledgerName = 2;
  // add other fields as needed
}